# hsb_indicator

./: .gitmodules
ESP32/lib/ui_library/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
ESP32/lib/ui_library/components/: ui_comp.c  ui_comp.h  ui_comp_containercolorbannerbottom1.c  ui_comp_containercolorbannerbottom1.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_labeltitlehomescreen.c  ui_comp_labeltitlehomescreen.h  ui_comp_labeltitlehomescreen3.c  ui_comp_labeltitlehomescreen3.h
ESP32/lib/ui_library/fonts/: ui_font_valueLargeRegular.c
ESP32/lib/ui_library/images/: ui_img_arrow_left_white_png.c  ui_img_connected_png.c  ui_img_humidity_png.c  ui_img_icons_arrow_left_white_png.c  ui_img_icons_connected_35x35_png.c  ui_img_icons_connected_png.c  ui_img_icons_humidity_72x108_png.c  ui_img_icons_humidity_png.c  ui_img_icons_indoor_57x108_png.c  ui_img_icons_indoor_png.c  ui_img_icons_key_icon_small_png.c  ui_img_icons_language_png.c  ui_img_icons_list_icon_png.c  ui_img_icons_options_png.c  ui_img_icons_outdoor_108x108_png.c  ui_img_icons_outdoor_png.c  ui_img_icons_outdoor_white_png.c  ui_img_icons_rooms_84x72_png.c  ui_img_icons_rooms_png.c  ui_img_icons_settings_50x50_png.c  ui_img_icons_settings_png.c  ui_img_icons_signal0_png.c  ui_img_icons_signal1_png.c  ui_img_icons_signal2_png.c  ui_img_icons_signal3_png.c  ui_img_icons_signal4_png.c  ui_img_icons_signal5_png.c  ui_img_icons_wifi_icon_small_png.c  ui_img_indoor_png.c  ui_img_key_icon_small_png.c  ui_img_language_png.c  ui_img_list_icon_png.c  ui_img_options_png.c  ui_img_outdoor_png.c  ui_img_outdoor_white_png.c  ui_img_rooms_png.c  ui_img_settings_png.c  ui_img_signal0_png.c  ui_img_signal1_png.c  ui_img_signal2_png.c  (+4 more)
ESP32/lib/ui_library/screens/: ui_screenfurtheroptions.c  ui_screenhome.c  ui_screenhomeairpressure.c  ui_screenhomeco2.c  ui_screenlanguage.c  ui_screenoptions.c  ui_screenoutdoorsensor.c  ui_screenpin.c  ui_screenrooms.c  ui_screensensoractivity.c  ui_screenwlan.c
UI_Project/: Themes.slt  hsb_indicator.sll  hsb_indicator.spj
UI_Project/assets/fonts/: ui_font_bodyLargeRegular.c  ui_font_bodyLargeRegular.fcfg  ui_font_bodyNormalRegular.c  ui_font_bodyNormalRegular.fcfg  ui_font_bodySmallRegular.c  ui_font_bodySmallRegular.fcfg  ui_font_header1Regular.c  ui_font_header1Regular.fcfg  ui_font_valueLargeRegular.fcfg
UI_Project/components/: containerColorBannerBottom1.ecomp  labelTitleHomeScreen.ecomp  labelTitleHomeScreen3.ecomp
